Fixed overflow on x axis

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,6 @@
+body {
+    overflow-x:hidden;
+}
 #topbar{
     background-color:#4099FF;
 }
